[MOM-311] refactor: introduce new DTOs for transfer execution and question reward handling
Signed-off-by: Nutria <qkrwldn2016@gmail.com>