@@ -2,12 +2,13 @@ package momzzangseven.mztkbe.modules.web3.execution.infrastructure.adapter;
 
 import java.math.BigInteger;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import momzzangseven.mztkbe.modules.web3.eip7702.application.port.out.Eip7702AuthorizationPort;
-import momzzangseven.mztkbe.modules.web3.eip7702.application.port.out.Eip7702ChainPort;
-import momzzangseven.mztkbe.modules.web3.eip7702.application.port.out.Eip7702TransactionCodecPort;
-import momzzangseven.mztkbe.modules.web3.eip7702.application.port.out.VerifyExecutionSignaturePort;
+import momzzangseven.mztkbe.modules.web3.eip7702.application.dto.Eip7702ExecutionAuthorizationTuple;
+import momzzangseven.mztkbe.modules.web3.eip7702.application.dto.Eip7702ExecutionBatchCall;
+import momzzangseven.mztkbe.modules.web3.eip7702.application.dto.Eip7702ExecutionFeePlan;
+import momzzangseven.mztkbe.modules.web3.eip7702.application.dto.Eip7702ExecutionSignCommand;
+import momzzangseven.mztkbe.modules.web3.eip7702.application.dto.Eip7702ExecutionSignedPayload;
+import momzzangseven.mztkbe.modules.web3.eip7702.application.port.in.ManageExecutionEip7702UseCase;
 import momzzangseven.mztkbe.modules.web3.execution.application.port.out.ExecutionEip7702GatewayPort;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Component;
@@ -20,10 +21,7 @@ import org.springframework.stereotype.Component;
     havingValue = "true")
 public class ExecutionEip7702GatewayAdapter implements ExecutionEip7702GatewayPort {
 
-  private final Eip7702AuthorizationPort eip7702AuthorizationPort;
-  private final Eip7702ChainPort eip7702ChainPort;
-  private final Eip7702TransactionCodecPort eip7702TransactionCodecPort;
-  private final VerifyExecutionSignaturePort verifyExecutionSignaturePort;
+  private final ManageExecutionEip7702UseCase manageExecutionEip7702UseCase;
 
   @Override
   public boolean verifyAuthorizationSigner(
@@ -32,15 +30,16 @@ public class ExecutionEip7702GatewayAdapter implements ExecutionEip7702GatewayPo
       BigInteger nonce,
       String signatureHex,
       String expectedAddress) {
-    return eip7702AuthorizationPort.verifySigner(
+    return manageExecutionEip7702UseCase.verifyAuthorizationSigner(
         chainId, delegateTarget, nonce, signatureHex, expectedAddress);
   }
 
   @Override
   public AuthorizationTuple toAuthorizationTuple(
       long chainId, String delegateTarget, BigInteger nonce, String signatureHex) {
-    Eip7702ChainPort.AuthorizationTuple tuple =
-        eip7702AuthorizationPort.toAuthorizationTuple(chainId, delegateTarget, nonce, signatureHex);
+    Eip7702ExecutionAuthorizationTuple tuple =
+        manageExecutionEip7702UseCase.toAuthorizationTuple(
+            chainId, delegateTarget, nonce, signatureHex);
     return new AuthorizationTuple(
         tuple.chainId(), tuple.address(), tuple.nonce(), tuple.yParity(), tuple.r(), tuple.s());
   }
@@ -51,60 +50,58 @@ public class ExecutionEip7702GatewayAdapter implements ExecutionEip7702GatewayPo
       String authorityAddress,
       String data,
       List<AuthorizationTuple> authorizationList) {
-    return eip7702ChainPort.estimateGasWithAuthorization(
+    return manageExecutionEip7702UseCase.estimateGasWithAuthorization(
         sponsorAddress,
         authorityAddress,
         data,
         authorizationList.stream()
             .map(
                 tuple ->
-                    new Eip7702ChainPort.AuthorizationTuple(
+                    new Eip7702ExecutionAuthorizationTuple(
                         tuple.chainId(),
                         tuple.address(),
                         tuple.nonce(),
                         tuple.yParity(),
                         tuple.r(),
                         tuple.s()))
-            .collect(Collectors.toList()));
+            .toList());
   }
 
   @Override
   public FeePlan loadSponsorFeePlan() {
-    Eip7702ChainPort.FeePlan feePlan = eip7702ChainPort.loadSponsorFeePlan();
+    Eip7702ExecutionFeePlan feePlan = manageExecutionEip7702UseCase.loadSponsorFeePlan();
     return new FeePlan(feePlan.maxPriorityFeePerGas(), feePlan.maxFeePerGas());
   }
 
   @Override
   public BigInteger loadPendingAccountNonce(String address) {
-    return eip7702ChainPort.loadPendingAccountNonce(address);
+    return manageExecutionEip7702UseCase.loadPendingAccountNonce(address);
   }
 
   @Override
   public String hashCalls(List<BatchCall> calls) {
-    return eip7702TransactionCodecPort.hashCalls(
+    return manageExecutionEip7702UseCase.hashCalls(
         calls.stream()
             .map(
-                call ->
-                    new Eip7702TransactionCodecPort.BatchCall(call.to(), call.value(), call.data()))
-            .collect(Collectors.toList()));
+                call -> new Eip7702ExecutionBatchCall(call.to(), call.value(), call.data()))
+            .toList());
   }
 
   @Override
   public String encodeExecute(List<BatchCall> calls, byte[] executionSignature) {
-    return eip7702TransactionCodecPort.encodeExecute(
+    return manageExecutionEip7702UseCase.encodeExecute(
         calls.stream()
             .map(
-                call ->
-                    new Eip7702TransactionCodecPort.BatchCall(call.to(), call.value(), call.data()))
-            .collect(Collectors.toList()),
+                call -> new Eip7702ExecutionBatchCall(call.to(), call.value(), call.data()))
+            .toList(),
         executionSignature);
   }
 
   @Override
   public SignedPayload signAndEncode(SignCommand command) {
-    Eip7702TransactionCodecPort.SignedPayload signedPayload =
-        eip7702TransactionCodecPort.signAndEncode(
-            new Eip7702TransactionCodecPort.SignCommand(
+    Eip7702ExecutionSignedPayload signedPayload =
+        manageExecutionEip7702UseCase.signAndEncode(
+            new Eip7702ExecutionSignCommand(
                 command.chainId(),
                 command.nonce(),
                 command.maxPriorityFeePerGas(),
@@ -116,14 +113,14 @@ public class ExecutionEip7702GatewayAdapter implements ExecutionEip7702GatewayPo
                 command.authorizationList().stream()
                     .map(
                         tuple ->
-                            new Eip7702ChainPort.AuthorizationTuple(
+                            new Eip7702ExecutionAuthorizationTuple(
                                 tuple.chainId(),
                                 tuple.address(),
                                 tuple.nonce(),
                                 tuple.yParity(),
                                 tuple.r(),
                                 tuple.s()))
-                    .collect(Collectors.toList()),
+                    .toList(),
                 command.sponsorPrivateKeyHex()));
     return new SignedPayload(signedPayload.rawTx(), signedPayload.txHash());
   }
@@ -135,7 +132,7 @@ public class ExecutionEip7702GatewayAdapter implements ExecutionEip7702GatewayPo
       String callDataHash,
       BigInteger deadlineEpochSeconds,
       String signatureHex) {
-    return verifyExecutionSignaturePort.verify(
+    return manageExecutionEip7702UseCase.verifyExecutionSignature(
         authorityAddress, prepareId, callDataHash, deadlineEpochSeconds, signatureHex);
   }
 }
